added carousel1-04 mixins

--- a/index.bundle.css
+++ b/index.bundle.css
@@ -827,10 +827,12 @@ body {
     visibility: visible; }
 
 .carousel1_04_pagebuttons {
-  width: 15px;
-  height: 15px;
+  width: 12px;
+  height: 12px;
+  background-color: #ccc;
+  border-radius: 50%;
   margin-right: 4px;
-  background-color: #ccc; }
+  cursor: pointer; }
 
 .carousel1_04_items {
   height: 0;
@@ -868,9 +870,9 @@ body {
 .carousel1_04_previous,
 .carousel1_04_next {
   padding: 10px;
-  height: 100%;
   background-color: #000;
-  color: #fff; }
+  color: #fff;
+  height: 100%; }
   .carousel1_04_previous p,
   .carousel1_04_next p {
     position: absolute;
