--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 @import "vendor/mq"; 
 @import "layout/grid";
 
+@import "components/buttons";
+
 @import "carousel1-01";
 
 // show the active breakpoint (_mq.scss)
