added chevron icon on carousel1-01 buttons

--- a/index.bundle.css
+++ b/index.bundle.css
@@ -41,7 +41,7 @@ input [type="button"],
   margin: 0;
   padding: 0; }
 
-.btn1-01, .carousel1-01_pagebuttons, .carousel1_05_previous,
+.btn1-01, .carousel1-01 button, .carousel1-01_pagebuttons, .carousel1_05_previous,
 .carousel1_05_next, .carousel1-05_pagebuttons {
   padding: 4px; }
 
@@ -824,7 +824,15 @@ input[aria-pressed="true"],
   height: 100px; }
   .carousel1-01 button {
     background-color: #666;
-    border: 1px solid #000; }
+    border: 1px solid #000;
+    cursor: pointer; }
+    .carousel1-01 button svg {
+      display: inline-block;
+      vertical-align: middle;
+      width: 24px;
+      height: 24px;
+      fill: #fff;
+      background-color: #555; }
 
 .carousel1-01_content {
   background-color: #ccc; }
