--- a/src/styles/_carousel1-01.scss
+++ b/src/styles/_carousel1-01.scss
@@ -133,7 +133,32 @@ body {
 
 .carousel1-03 {
   height: 100px; 
+
+  button {
+    border: 1px solid #000; 
+    cursor: pointer;
+
+    span {
+      vertical-align: middle;
+    }
+
+    svg {
+      @extend %display--inline-block;
+      vertical-align: middle;
+      width: 24px;
+      height: 24px;
+      fill: #fff;
+    }
+  }
 }
+
+.carousel1_03_previous {
+  padding: 4px 4px 4px 0; /* trbl */
+}
+
+.carousel1_03_next {
+  padding: 4px 0 4px 4px; /* trbl */
+} 
 
 .carousel1-03_pagination {
   @extend %text--center;
