tweaked carousel1-05 buttons

--- a/index.bundle.css
+++ b/index.bundle.css
@@ -18,8 +18,7 @@
   display: block; }
 
 .btn, .carousel1-01 button svg, .carousel1-01_pagebuttons, .carousel1-02 button svg, .carousel1_02_pagebuttons, .carousel1-03 button svg, .carousel1_03_pagebuttons, .carousel1_04_pagebuttons, .carousel1_04_previous,
-.carousel1_04_next, .carousel1_05_previous,
-.carousel1_05_next, .carousel1-05_pagination, .carousel1-05_pagebuttons {
+.carousel1_04_next, .carousel1-05 button svg, .carousel1-05_pagination, .carousel1-05_pagebuttons {
   display: inline-block; }
 
 input, textarea, select, html, body, div, span, applet, object, iframe,
@@ -41,8 +40,7 @@ input [type="button"],
   margin: 0;
   padding: 0; }
 
-.btn1-01, .carousel1-01_pagebuttons, .carousel1_05_previous,
-.carousel1_05_next, .carousel1-05_pagebuttons {
+.btn1-01, .carousel1-01_pagebuttons, .carousel1-05_pagebuttons {
   padding: 4px; }
 
 .carousel1-01_pagination, .carousel1-01_prevnext, .carousel1-02_pagination, .carousel1-02_prevnext, .carousel1-03_pagination, .carousel1-03_prevnext, .carousel1-04_pagination, .carousel1-05_prevnext, .carousel1-05_pagination {
@@ -989,6 +987,25 @@ input[aria-pressed="true"],
 
 .carousel1-05 {
   height: 100px; }
+  .carousel1-05 button {
+    border: 1px solid #000;
+    cursor: pointer;
+    background-color: #666; }
+    .carousel1-05 button span {
+      vertical-align: middle; }
+    .carousel1-05 button svg {
+      vertical-align: middle;
+      width: 24px;
+      height: 24px;
+      fill: #fff; }
+
+.carousel1_05_previous {
+  padding: 0 4px 0 0;
+  /* trbl */ }
+
+.carousel1_05_next {
+  padding: 0 0 0 4px;
+  /* trbl */ }
 
 .carousel1_05_items {
   height: 0;
@@ -999,11 +1016,6 @@ input[aria-pressed="true"],
   height: auto;
   visibility: visible;
   opacity: 1; }
-
-.carousel1_05_previous,
-.carousel1_05_next {
-  background-color: #000;
-  color: #fff; }
 
 .carousel1-05_pagebuttons {
   background-color: #ccc;
